gst/vaapi/gstvaapiencode.c
@@ -439,6 +439,12 @@ gst_vaapiencode_open (GstVideoEncoder * venc)
 }
 
 static gboolean
+gst_vaapiencode_start (GstVideoEncoder * venc)
+{
+  return ensure_encoder (GST_VAAPIENCODE_CAST (venc));
+}
+
+static gboolean
 gst_vaapiencode_close (GstVideoEncoder * venc)
 {
   GstVaapiEncode *const encode = GST_VAAPIENCODE_CAST (venc);
@@ -473,8 +479,6 @@ gst_vaapiencode_set_format (GstVideoEncoder * venc, GstVideoCodecState * state)
 
   g_return_val_if_fail (state->caps != NULL, FALSE);
 
-  if (!ensure_encoder (encode))
-    return FALSE;
   if (!set_codec_state (encode, state))
     return FALSE;
 
@@ -713,6 +717,7 @@ gst_vaapiencode_class_init (GstVaapiEncodeClass * klass)
 
   venc_class->open = GST_DEBUG_FUNCPTR (gst_vaapiencode_open);
   venc_class->close = GST_DEBUG_FUNCPTR (gst_vaapiencode_close);
+  venc_class->start = GST_DEBUG_FUNCPTR (gst_vaapiencode_start);
   venc_class->set_format = GST_DEBUG_FUNCPTR (gst_vaapiencode_set_format);
   venc_class->handle_frame = GST_DEBUG_FUNCPTR (gst_vaapiencode_handle_frame);
   venc_class->finish = GST_DEBUG_FUNCPTR (gst_vaapiencode_finish);
